--- a/paper/related-work/approaches/tcs.tex
+++ b/paper/related-work/approaches/tcs.tex
@@ -1,7 +1,7 @@
 % !TeX root = ../../thesis.tex
 
 \subsection{\tcs{}}
-The second algorithm closely resembles the previous one. Instead of determining the minimal hitting set of the test suite in order to permanently remove tests, this algorithm has a notion of context. Prior to the execution of the tests, the algorithm performs a \emph{white-box static analysis} of the codebase to identify which parts have been changed. Subsequently, only the tests regarding modified parts are executed, making the selection temporary (\autoref{fig:tcs}) and modification-aware \cite{10.1002/stv.430}. Rothermel and Harrold define this formally in \autoref{def:tcs}.
+The second approach closely resembles the previous one. However, instead of permanently removing redundant test cases, \acrfull{tcs} has a notion of context. In this algorithm, we will not calculate the minimal hitting set at runtime, but before executing the test suite, we will perform a \emph{white-box static analysis} of the source code. This analysis identifies which parts of the source code have been changed and executes only the corresponding test cases. Subsequent executions of the test suite will require a new analysis, thus making the selection temporary (\Cref{fig:tcs}) and modification-aware \cite{10.1002/stv.430}. Rothermel and Harrold define this formally in \cref{def:tcs}.
 
 \begin{definition}[\tcs{}]
 \label{def:tcs}
