--- a/paper/related-work/adoption.tex
+++ b/paper/related-work/adoption.tex
@@ -1,7 +1,8 @@
 % !TeX root = ../thesis.tex
 
 \section{Adoption in testing frameworks}
-Some of the approaches discussed above have been integrated in existing software testing frameworks. This paper will now proceed by conducting an analysis of these frameworks and tools to analyse which optimisation features are available and how they were implemented.
+In the final section of this chapter, we will investigate how existing software testing frameworks have implemented these and other optimisation techniques.
 
 \input{related-work/adoption/gradle-junit.tex}
+\input{related-work/adoption/surefire.tex}
 \input{related-work/adoption/openclover.tex}
