--- a/paper/related-work/algorithms.tex
+++ b/paper/related-work/algorithms.tex
@@ -2,27 +2,33 @@
 
 \section{Algorithms}
 \label{sec:relatedwork-algorithms}
-In \autoref{ssec:tsm} the relation was explained between applying Test Suite Minimisation and finding the minimal hitting set of the test suite and the set of requirements, which is an NP-complete problem. Therefore, the use of \emph{heuristics} is required. A heuristic is an experience-based method that can be used to solve a hard to compute problem by finding a fast approximation \cite{6588537}. However, the found solution will mostly be suboptimal or might sometimes even fail to find any solution at all. Considering its relation to the minimal hitting set problem, heuristics that are known to literature for solving this problem can also be used to implement \tsm{}. A selection of these heuristics will be discussed below. It should be noted however that the used terminology and naming of the variables might have been changed to ensure mutual consistency. Every algorithm has been adapted to adhere to the conventions provided in \autoref{def:alg-naming} and \autoref{def:cardinality}.
+\acrshort{tcp} is essentially an extended version of \acrshort{tsm} since we can first execute the minimised test suite and afterwards the remaining test cases. Additionally, \cref{ssec:tsm} has explained that \acrshort{tsm} is an instance of the minimal hitting set problem, which is an NP-complete problem. Consequently, we know that both \acrshort{tsm} and \acrshort{tcp} are NP-complete problems as well and therefore, we require the use of \emph{heuristics}. A heuristic is an experience-based method that can be applied to solve a hard to compute problem by finding a fast approximation. However, the found solution will mostly be suboptimal, or sometimes the algorithm might even fail to find any solution at all. Given the relation between \acrshort{tsm} and the minimal hitting set problem, we can implement an optimisation algorithm by modifying any known heuristic that finds the minimal hitting set. This paper will now proceed by discussing a selection of these heuristics. The used terminology and the names of the variables have been changed to ensure mutual consistency between the algorithms. Every algorithm has been adapted to adhere to the conventions provided in \cref{def:alg-naming,def:cardinality}.
 
 \begin{definition}[Naming convention]
 \label{def:alg-naming}
 \mbox{}
 \begin{itemize}
-	\item $C$: the set of all lines in the application source code that are covered by at least one test case $t \in TS$.
+	\item $TS = \{T_1, \dots, T_n\}$: the set of all test cases $t$ in the test suite.
+	\item $RS = \{T_1, \dots, T_n\} \subseteq TS$: the representative set of test cases $t$ that have been selected by the algorithm.
+	\item $C = \{c_1, \dots, c_m\}$: the set of all source code lines in the application, that are covered by at least one test case $T \in TS$.
+	\item $CT = \begin{bmatrix}
+		CT_1 & \dots & CT_m
+	\end{bmatrix}$: the set of test groups.
 		\begin{itemize}
-			\item $CT_l$ denotes the test group $l$, which corresponds to the set of all tests $t \in TS$ that cover source code line $l \in C$.
+			\item $CT_c = \{T_1, \dots, T_n\} \subseteq TS$: the test group $c$, which corresponds to the set of all test cases $T \in TS$ that cover the source code line $c \in C$.
 		\end{itemize}
-	\item $RS$: the representative set of test cases, these are the test cases that have been selected by the algorithm.
-	\item $TS$: the set of all test cases in the test suite.
+	\item $TL = \begin{bmatrix}
+		TL_1 & \dots & TL_n
+	\end{bmatrix}$: the set of coverage groups.
 		\begin{itemize}
-			\item $TL_t$ denotes the set of all source code lines that are covered by test $t \in TS$.
+			\item $TL_t = \{c_1, \dots, c_m\} \subseteq C$: the set of all source code lines $c \in C$ that are covered by test case $t \in TS$.
 		\end{itemize}
 \end{itemize}
 \end{definition}
 
 \begin{definition}[Cardinality]
 \label{def:cardinality}
-For a finite set $S$, the cardinality $|S|$ is defined as the number of elements in $S$. In case of potential confusion, the cardinality of $S$ can also be denoted as $Card(S)$.
+For a finite set $S$, the cardinality $|S|$ is defined as the number of elements in $S$. In case of potential confusion, we can use $Card(S)$ to denote the cardinality of $S$.
 \end{definition}
 
 \newpage
