--- a/paper/related-work/algorithms/hgs.tex
+++ b/paper/related-work/algorithms/hgs.tex
@@ -1,11 +1,12 @@
 % !TeX root = ../../thesis.tex
 
 \subsection{HGS}\label{ssec:alg-hgs}
-The second algorithm was created by Harrold, Gupta and Soffa \cite{hgs}. This algorithm constructs the minimal hitting set of the test suite in an iterative fashion. As opposed to the greedy algorithm (\autoref{ssec:alg-greedy}), the HGS algorithm considers the test groups $CT$ instead of the set $TLt$ to obtain a list of test cases that cover all source code lines. More specifically, this algorithm considers the distinct test groups, denoted as $CTD$. Two test groups are considered indistinct if they differ in at least one test case. The pseudocode for this algorithm is provided in Algorithm \autoref{alg:hgs}.\\
+The second algorithm is the HGS algorithm. The algorithm was named after its creators Harrold, Gupta and Soffa \cite{hgs}. Similar to the Greedy algorithm (\cref{ssec:alg-greedy}), this algorithm will also iteratively construct the minimal hitting set. However, instead of considering the coverage groups $TL$, the algorithm uses the test groups $CT$. More specifically, we will use the distinct test groups, denoted as $CTD$. We consider two test groups $CT_i$ and $CT_j$ as distinct if they differ in at least one test case. The pseudocode for this algorithm is provided in \Cref{alg:hgs}.\\
 
-\noindent Similar to the previous algorithm, an empty representative set $RS$ is constructed in which the selected test cases will be stored. The algorithm begins by iterating over every source code line $l \in C$ and constructing the corresponding set of test groups $CT_l$. As mentioned before, for performance reasons this set is reduced to $CTD$, only retaining distinct test groups. Next, the algorithm selects every test group of which the cardinality is equal to 1 and adds these to $RS$. This corresponds to every test case that covers a line of code, which is exclusively covered by that single test case. Subsequently, the lines that are covered by any of the selected test cases are removed from $C$. This process is repeated for an incremented cardinality, until every line in $C$ is covered. Since the remaining test groups will now contain more than one test case, the algorithm needs to make a choice on which test case to select. The authors have chosen that the test case that occurs in the most test groups is preferred. In the event of a tie, this choice is deferred until the next iteration.\\
+\noindent The algorithm consists of two main phases. The first phase begins by constructing an empty representative set $RS$ in which we will store the selected test cases. Subsequently, we iterate over every source code line $c \in C$ to create the corresponding test groups $CT$. As mentioned before, we will reduce this set to $CTD$ for performance reasons and as such, only retain the distinct test groups. Next, we select every test group of which the cardinality is equal to $\SI{1}{}$ and add these to $RS$. The representative set will now contain every test case that covers precisely one line of code, which is exclusively covered by that single test case. Afterwards, we remove every covered line from $C$. The next phase consists of repeating this process for increasing cardinalities until $C$ is empty. However, since the test groups will now contain more than one test case, we need to make a choice on which test case to select. The authors prefer the test case that covers the most remaining lines. In the event of a tie, we defer the choice until the next iteration.\\
 
-\noindent The authors have provided an accompanying calculation of the computational time complexity of this algorithm \cite{hgs}. With respect to the naming convention introduced in \autoref{def:alg-naming}, additionally let $n$ denote the number of distinct test groups $CTD$, $nt$ the number of test cases $t \in TS$ and $MAX\_CARD$ the cardinality of the largest test group. The HGS algorithm consists of two steps which are performed repeatedly. The first step involves computing the number of occurrences of every test case $t$ in each test group. Given that there are $n$ distinct test groups and, in the worst case scenario, each test group can contain $MAX\_CARD$ test cases which all need to be examined once, the computational cost of this step is equal to $O(n * MAX\_CARD)$. In order to determine which test case should be included in the representative set $RS$, the algorithm needs to find all test cases for which the number of occurrences in all test groups is maximal, which requires at most $O(nt * MAX\_CARD)$. Since every repetition of these two steps adds a test case that belongs to at least one out of $n$ test groups to the representative set, the overall runtime of the algorithm is $O(n * (n + nt) * MAX\_CARD)$.
+\noindent The authors have provided an accompanying calculation of the computational time complexity of this algorithm \cite{hgs}. In addition to the naming convention introduced in \cref{def:alg-naming}, let $n$ denote the number of distinct test groups $CTD$, $nt$ the number of test cases $t \in TS$ and $MAX\_CARD$ the cardinality of the test group with the most test cases. In the HGS algorithm we need to perform two steps repeatedly. The first step involves computing the number of occurrences of every test case $t$ in each test group. Given that there are $n$ distinct test groups and, in the worst-case scenario, each test group can contain $MAX\_CARD$ test cases which we all need to examine once, the computational cost of this step is equal to $O(n * MAX\_CARD)$. For the next step, in order to determine which test case we should include in the representative set $RS$, we need to find all test cases for which the number of occurrences in all test groups is maximal, which requires at most $O(nt * MAX\_CARD)$. Since every repetition of these two steps adds a test case that belongs to at least one out of $n$ test groups to the representative set, the overall runtime of the algorithm is $O(n * (n + nt) * MAX\_CARD)$.\\
+
 \begin{algorithm}[h!]
 \caption{HGS algorithm (\cite{hgs})}
 \label{alg:hgs}
