Approaches tikz pictures

--- a/paper/related-work.tex
+++ b/paper/related-work.tex
@@ -11,7 +11,7 @@ In the previous chapter, we have stressed the paramount importance of frequently
 
 \clearpage
 \input{related-work/approaches.tex}
-\newpage
+\clearpage
 \input{related-work/algorithms.tex}
-\newpage
+\clearpage
 \input{related-work/adoption.tex}
