--- a/paper/related-work/approaches/tcp.tex
+++ b/paper/related-work/approaches/tcp.tex
@@ -17,7 +17,7 @@ Both \acrshort{tsm} and \acrshort{tcs} attempt to execute as few tests as possib
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.8\textwidth]{assets/images/approach-tcp.pdf}
+	\includegraphics[width=\textwidth]{assets/tikz/approach-tcp.tikz}
 	\caption{\tcp{}}
 	\label{fig:tcp}
 \end{figure}
