--- a/paper/related-work/approaches/tcs.tex
+++ b/paper/related-work/approaches/tcs.tex
@@ -17,7 +17,9 @@ The second approach closely resembles the previous one. However, instead of perm
 
 \begin{figure}[htbp!]
 	\centering
-	\includegraphics[width=0.8\textwidth]{assets/images/approach-tcs.pdf}
+	\includegraphics[width=\textwidth]{assets/tikz/approach-tcs.tikz}
 	\caption{\tcs{}}
 	\label{fig:tcs}
 \end{figure}
+
+\clearpage
