--- a/paper/velocity/pipeline.tex
+++ b/paper/velocity/pipeline.tex
@@ -13,7 +13,7 @@ As was explained before, the provided Java implementation of the agent was desig
 	\item \texttt{server} the url at which the controller can be reached.
 \end{itemize}
 
-\noindent \autoref{lst:pipeline-buildgradle} contains a minimal integration of the agent in a Gradle build script, applied to a library for generating random numbers\footnote{\url{https://github.com/thepieterdc/random-java}}}. The controller is hosted at the same host as the agent and is accessible at port \texttt{8080}.
+\noindent \autoref{lst:pipeline-buildgradle} contains a minimal integration of the agent in a Gradle build script, applied to a library for generating random numbers\footnote{\url{https://github.com/thepieterdc/random-java}}. The controller is hosted at the same host as the agent and is accessible at port \texttt{8080}.
 
 \lstinputlisting[caption=Minimal Gradle buildscript, label=lst:pipeline-buildgradle, language=Groovy]{assets/listings/build.gradle}
 
