--- a/paper/evaluation/data-collection/travis.tex
+++ b/paper/evaluation/data-collection/travis.tex
@@ -3,7 +3,7 @@
 \subsection{\travisci{} build data}
 We can answer the first three research questions by analysing data from projects hosted on \travisci{} (\cref{sssec:travisci}). This data has been obtained from two sources.\\
 
-\noindent The first source comprises a database \cite{travisanalysis} of $\SI{35793144}{}$ log files of executed test runs, contributed by Durieux et al. The magnitude of the dataset ($\SI{61.11}{\gibi\byte}$) requires a big data approach to parse these log files. Two straightforward \Gls{mapreduce} pipelines have been created using the Apache Spark\footnote{\url{https://spark.apache.org/}} engine, to provide an answer to the first and second research question respectively.\\
+\noindent The first source comprises a database \cite{travisanalysis} of $\SI{35793144}{}$ log files of executed test runs, contributed by Durieux et al. The magnitude of the dataset ($\SI{61.11}{\gibi\byte}$) requires a big data approach to parse these log files. Two straightforward \Gls{mapreduce} pipelines (\Cref{fig:eval-mapreduce-1,fig:eval-mapreduce-2} have been created using the Apache Spark\footnote{\url{https://spark.apache.org/}} engine, to provide an answer to the first and second research question respectively.\\
 
 \begin{figure}[htbp!]
 	\centering
