--- a/paper/thesis.tex
+++ b/paper/thesis.tex
@@ -159,56 +159,56 @@
 % Titlepage.
 \frontmatter
 \pagestyle{empty}
-%\includepdf[pages=-]{titlepage.pdf}
+\includepdf[pages=-]{titlepage.pdf}
 
-%\blankpage{}
+\blankpage{}
 
 % Admission.
-%\input{admission.tex}
+\input{admission.tex}
 \clearpage
 
 % Acknowledgements.
-%\input{acknowledgements.tex}
+\input{acknowledgements.tex}
 
 % Summaries.
 \selectlanguage{english}
-%\input{summary/english.tex}
+\input{summary/english.tex}
 \clearpage
 \selectlanguage{dutch}
-%\input{summary/dutch.tex}
+\input{summary/dutch.tex}
 \clearpage
 \selectlanguage{english}
 
 % Extended abstracts.
 \addcontentsline{toc}{chapter}{Extended abstract}
-%\includepdf[pages=-]{abstract-en/extended-abstract.pdf}
+\includepdf[pages=-]{abstract-en/extended-abstract.pdf}
 \addcontentsline{toc}{chapter}{Extended abstract (Dutch)}
-%\includepdf[pages=-]{abstract-nl/extended-abstract.pdf}
+\includepdf[pages=-]{abstract-nl/extended-abstract.pdf}
 
 % Vulgarising summary.
 \pagestyle{plain}
-%\input{summary/lay.tex}
+\input{summary/lay.tex}
 \clearpage
 
 \pagestyle{fancy}
 
-%\blankpage{}
+\blankpage{}
 
 % ToC.
-%\tableofcontents
+\tableofcontents
 
 % Corpus.
 \mainmatter
 
-%\input{glossary.tex}
+\input{glossary.tex}
 \clearpage
 %\input{introduction.tex}
-%\clearpage
+\clearpage
 %\input{software-engineering.tex}
 \clearpage
-\input{related-work.tex}
+%\input{related-work.tex}
 \clearpage
-%\input{velocity.tex}
+\input{velocity.tex}
 \clearpage
 %\input{evaluation.tex}
 \clearpage
